--- a/Mini Project 1/Final Report.Rmd
+++ b/Mini Project 1/Final Report.Rmd
@@ -18,7 +18,7 @@ library(knitr)
 
 ## Table of Contents
 
--   [1. Introduction](#introduction)
+-   [1. Intro](#intro)
 -   [2. Research Question](#research-question)
 -   [3. Data Scraping & Tidying the Data](#Data-Scaping-and-Tidying-the-Data)
 -   [4. Descriptive Statistics and Plots](#descriptive-statistics-and-plots)
@@ -28,7 +28,7 @@ library(knitr)
 
 This project investigates the factors associated with national happiness, utilizing happiness scores from the World Population Review and key factors from Wikipedia tables. Key variables include GDP per capita, environmental quality, abd literacy rates offering insights into the economic, environmental, and educational factors that influence happiness levels across countries.
 
-The reason why I'm working on this project is because it is important to understand how these factors contribute to national happiness. Happiness is a critical measure of well-being, and identifying its determinants is vital.
+The reason why I'm working on this project is because it is important to understand how these factors contribute to national happiness. Happiness is a critical measure of well-being, and identifying its determinants is vital. abcde
 
 # 2. Research Question {#research-question}
 
